--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
   <canvas class="webgl"></canvas>
-  <script type="module" src="/main.js"></script>
+  <script type="module" src="render/main.js"></script>
 </body>
 </html>
